Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25833

Deployment fails on iPhone Simulator due missing CFBundleVersion

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • Qt Creator 4.15.0
    • iOS Support
    • None
    • Qt 5.15.3
      Xcode 11.7
    • macOS
    • 84cc7208d (master)

      When selecting iPhone simulator as target the deployment to the simulator device fails.

      QtCreator gives the following error message:

      Error while building/deploying project StiebelEltron (kit: Qt 5.15.3 for iOS Simulator)
      When executing step "Deploy to iOS Simulator"

      Investigated bit further and tried to launch it directly from the command line with the following result:

      An error was encountered processing the command (domain=NSPOSIXErrorDomain, code=22):
      Failed to install the requested application
      The application's Info.plist does not contain CFBundleVersion.
      Ensure your bundle contains a CFBundleVersion.
      

      After that I opened the generated XCode project and added the Version manually.

      Build and Deploy from XCode or command Line works after that

       

       

        For Gerrit Dashboard: QTCREATORBUG-25833
        # Subject Branch Project Status CR V

            con Eike Ziller
            sbstnstrn Sebastian Stern
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes