iOS: Improve error message when installation on Simulator fails

In case of error, post the output of the simctl command in compile
output and issues pane.

Fixes: QTCREATORBUG-25833
Change-Id: I62a0f7b10b5188a7c8b4e1db543b66d0661d4e6a
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>